Fix search result image being shrunk on mobile screens

--- a/modules/Layout/Header/SearchWidget/components/Hit.module.scss
+++ b/modules/Layout/Header/SearchWidget/components/Hit.module.scss
@@ -17,6 +17,7 @@
     width: 3.75rem;
     height: 3.75rem;
     margin-right: $spacing-3;
+    flex-shrink: 0;
 }
 
 .image,
